<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RobotControlActivity">

    <Button
        android:id="@+id/ctrlBtn_sendVel"
        android:layout_width="96dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/send_ctlrs"
        android:textColor="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbtToDataBtn" />

    <ImageButton
        android:id="@+id/rbtToDataBtn"
        android:layout_width="123dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/go_to_data"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/back_to_vitals_foreground" />

    <EditText
        android:id="@+id/editRightSpeed"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:autofillHints="deg/sec"
        android:ems="10"
        android:hint="@string/right_speed"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="#03A9F4"
        android:textColorHint="#8003A9F4"
        app:layout_constraintBaseline_toBaselineOf="@+id/editLeftSpeed"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editLeftSpeed"
        android:layout_width="119dp"
        android:layout_height="52dp"
        android:autofillHints="deg/sec"
        android:ems="10"
        android:hint="@string/left_speed"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="#232B2E"
        android:textColorHint="#80232B2E"
        app:layout_constraintBaseline_toBaselineOf="@+id/ctrlBtn_sendVel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/ctrlBtn_stop"
        android:layout_width="67dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/stop"
        android:textColor="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctrlBtn_sendVel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>